--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaUsuario.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaUsuario.html
@@ -51,47 +51,6 @@
               </div>
             </div>
           </div>
-          <div class="col-3">
-            <ul class="navbar-nav justify-content-evenly fs-3">
-              <li class="nav-item">
-                <a class="nav-link text-white" href="./indexEmpresa.html"
-                  >Inicio</a
-                >
-              </li>
-              <li class="nav-item">
-                <img
-                  class="rounded-pill imgPerfil"
-                  src="../../img/Usuarios/Empresas/Empresa01.jpg"
-                  alt="Foto de Perfil"
-                />
-              </li>
-              <li class="nav-item">
-                <div class="dropdown selectUsuario">
-                  <button
-                    type="button"
-                    class="btn dropdown-toggle"
-                    data-bs-toggle="dropdown"
-                  >
-                    EcoTech
-                  </button>
-                  <ul class="dropdown-menu">
-                    <li>
-                      <a
-                        class="dropdown-item"
-                        href="./consultarMiPerfilEmpresa.html"
-                        >Perfil</a
-                      >
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="../../../index.html"
-                        >Cerrar Sessión</a
-                      >
-                    </li>
-                  </ul>
-                </div>
-              </li>
-            </ul>
-          </div>
         </div>
       </div>
       <div class="col-3">
@@ -102,7 +61,7 @@
           <li class="nav-item">
             <img
               class="rounded-pill imgPerfil"
-              src="../../img/ecoTechLogo.png"
+              src="../../img/Usuarios/Empresas/Empresa01.jpg"
               alt="Foto de Perfil"
             />
           </li>
@@ -235,35 +194,63 @@
             </div>
           </section>
         </div>
-        <div class="mainCenter">
-          <div class="espacio3"></div>
-          <section class="consultaUsuario">
-            <div class="container">
-              <h1>Usuarios registrados</h1>
-              <div class="table-responsive">
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th class="thClass">Perfil</th>
-                      <th class="thClass">Nickname</th>
-                      <th class="thClassLarge">Tipo de Usuario</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td><a href="./consultarPerfilPostulante">Perfil</a></td>
-                      <td>lgarcia</td>
-                      <td>Postulante</td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <a href="./consultarMiPerfilEmpresa.html">Perfil</a>
-                      </td>
-                      <td>EcoTech</td>
-                      <td>Empresa</td>
-                    </tr>
-                  </tbody>
-                </table>
+        <div class="col-8">
+          <section>
+            <h2>Usuarios registrados:</h2>
+            <div class="card">
+              <div class="row g-0">
+                <div
+                  class="col-md-3 justify-content-center align-items-center d-flex"
+                >
+                  <img
+                    src="../../img/Usuarios/Postulantes/Postulante01.png"
+                    class="img-fluid rounded-start"
+                    alt="Imagen Oferta"
+                  />
+                </div>
+                <div class="col-md-9">
+                  <div class="card-body">
+                    <h5 class="card-header p-0 border-0 bg-white text-start">
+                      lgarcia
+                    </h5>
+                    <p class="card-text">Tipo: Postulante</p>
+                  </div>
+                  <div class="card-footer border-0 bg-white text-end">
+                    <a
+                      href="./consultarMiPerfilEmpresa.html"
+                      class="btn btn-primary"
+                      >Mas Info</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="row g-0">
+                <div
+                  class="col-md-3 justify-content-center align-items-center d-flex"
+                >
+                  <img
+                    src="../../img/Usuarios/Empresas/Empresa01.jpg"
+                    class="img-fluid rounded-start"
+                    alt="Imagen Oferta"
+                  />
+                </div>
+                <div class="col-md-9">
+                  <div class="card-body">
+                    <h5 class="card-header p-0 border-0 bg-white text-start">
+                      EcoTech
+                    </h5>
+                    <p class="card-text">Tipo: Empresa</p>
+                  </div>
+                  <div class="card-footer border-0 bg-white text-end">
+                    <a
+                      href="./consultarMiPerfilEmpresa.html"
+                      class="btn btn-primary"
+                      >Mas Info</a
+                    >
+                  </div>
+                </div>
               </div>
             </div>
           </section>
