--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/Paquete.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/Paquete.html
@@ -230,38 +230,40 @@
                       Fecha 16/08/23
                     </li>
                   </ul>
-                  <div class="publicacionesPaquete">
-                    <table class="table borden border-0">
-                      <thead>
-                        <tr>
-                          <th scope="col">Tipo Publicaciones</th>
-                          <th scope="col">Cant.</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td><a href="./TipoPublicacion.html">Premium</a></td>
-                          <td>1</td>
-                        </tr>
-                        <tr>
-                          <td>
-                            <a href="./TipoPublicacion.html">Destacada</a>
-                          </td>
-                          <td>1</td>
-                        </tr>
-                        <tr>
-                          <td><a href="./TipoPublicacion.html">Estandar</a></td>
-                          <td>1</td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
+
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
                     <h2 class="">$240</h2>
+                    <a href="" class="btn btn-primary">Comprar</a>
                   </div>
                 </div>
+              </div>
+              <div class="publicacionesPaquete">
+                <table class="table borden border-0">
+                  <thead>
+                    <tr>
+                      <th scope="col">Tipo Publicaciones</th>
+                      <th scope="col">Cant.</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td><a href="./TipoPublicacion.html">Premium</a></td>
+                      <td>1</td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <a href="./TipoPublicacion.html">Destacada</a>
+                      </td>
+                      <td>1</td>
+                    </tr>
+                    <tr>
+                      <td><a href="./TipoPublicacion.html">Estandar</a></td>
+                      <td>1</td>
+                    </tr>
+                  </tbody>
+                </table>
               </div>
             </div>
           </div>
