--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/TipoPublicacion.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/TipoPublicacion.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="../css/general.css" />
+    <link rel="stylesheet" href="../../css/general.css" />
     <title>Trabajo.uy</title>
   </head>
   <body class="min-vh-100 d-flex flex-column">
