--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html
@@ -201,6 +201,7 @@
         </div>
         <div class="mainCenter col-8">
           <section class="consultaPaqueteTipoPublicacion">
+            <h2>Paquetes de Tipo de Publicacion:</h2>
             <div class="paqueteTipoPublicacion">
               <img
                 class="imgOfertas"
