--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/consultaDeTipoDePublicacionDeOfertaLaboral.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/consultaDeTipoDePublicacionDeOfertaLaboral.html
@@ -201,52 +201,77 @@
         </div>
         <div class="mainCenter col-8">
           <section class="consultaTipoPublicacion">
-            <div class="paqueteTipoPublicacion">
-              <p class="paqueteTipoPublicacionDatosView">
-                <strong>Tipo:</strong> Premium
-                <br />
-                <strong>Descripción:</strong>
-                Obtener maxima visibilidad.
-                <br />
-                <br />
-                <a href="../TipoPublicacion.html">Mas Info</a>
-              </p>
+            <h2>Tipo de Publicacion:</h2>
+            <div class="card">
+              <div class="row g-0">
+                <div class="col">
+                  <div class="card-body">
+                    <h5 class="card-header p-0 border-0 bg-white text-start">
+                      Premium
+                    </h5>
+                    <p class="card-text">Obtener maxima visibilidad.</p>
+                  </div>
+                  <div class="card-footer border-0 bg-white text-end">
+                    <a href="../TipoPublicacion.html" class="btn btn-primary"
+                      >Mas Info</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="row g-0">
+                <div class="col">
+                  <div class="card-body">
+                    <h5 class="card-header p-0 border-0 bg-white text-start">
+                      Destacada
+                    </h5>
+                    <p class="card-text">Destaca tu anuncio.</p>
+                  </div>
+                  <div class="card-footer border-0 bg-white text-end">
+                    <a href="../TipoPublicacion.html" class="btn btn-primary"
+                      >Mas Info</a
+                    >
+                  </div>
+                </div>
+              </div>
             </div>
 
-            <div class="paqueteTipoPublicacion">
-              <p class="paqueteTipoPublicacionDatosView">
-                <strong>Tipo:</strong> Destacada
-                <br />
-                <strong>Descripción:</strong>
-                Destaca tu anuncio.
-                <br />
-                <br />
-                <a href="../TipoPublicacion.html">Mas Info</a>
-              </p>
+            <div class="card">
+              <div class="row g-0">
+                <div class="col">
+                  <div class="card-body">
+                    <h5 class="card-header p-0 border-0 bg-white text-start">
+                      Estandar
+                    </h5>
+                    <p class="card-text">Mejora la posicion de tu anuncio.</p>
+                  </div>
+                  <div class="card-footer border-0 bg-white text-end">
+                    <a href="../TipoPublicacion.html" class="btn btn-primary"
+                      >Mas Info</a
+                    >
+                  </div>
+                </div>
+              </div>
             </div>
-
-            <div class="paqueteTipoPublicacion">
-              <p class="paqueteTipoPublicacionDatosView">
-                <strong>Tipo:</strong> Estandar
-                <br />
-                <strong>Descripción:</strong>
-                Mejora la posicion de tu anuncio.
-                <br />
-                <br />
-                <a href="../TipoPublicacion.html">Mas Info</a>
-              </p>
-            </div>
-
-            <div class="paqueteTipoPublicacion">
-              <p class="paqueteTipoPublicacionDatosView">
-                <strong>Tipo:</strong> Basica
-                <br />
-                <strong>Descripción:</strong>
-                Publica de forma sencilla en la lista de ofertas.
-                <br />
-                <br />
-                <a href="../TipoPublicacion.html">Mas Info</a>
-              </p>
+            <div class="card">
+              <div class="row g-0">
+                <div class="col">
+                  <div class="card-body">
+                    <h5 class="card-header p-0 border-0 bg-white text-start">
+                      Basica
+                    </h5>
+                    <p class="card-text">
+                      Publica de forma sencilla en la lista de ofertas.
+                    </p>
+                  </div>
+                  <div class="card-footer border-0 bg-white text-end">
+                    <a href="../TipoPublicacion.html" class="btn btn-primary"
+                      >Mas Info</a
+                    >
+                  </div>
+                </div>
+              </div>
             </div>
           </section>
         </div>
