--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/consultarMiPerfilPostulante.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/consultarMiPerfilPostulante.html
@@ -95,17 +95,27 @@
                 <tbody>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="">Consulta usuarios</a>
+                      <a class="btn" href="./consultaUsuario.html"
+                        >Consulta usuarios</a
+                      >
                     </td>
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="">Ver tipos de publicaciones</a>
+                      <a
+                        class="btn"
+                        href="./consultaDeTipoDePublicacionDeOfertaLaboral.html"
+                        >Ver tipos de publicaciones</a
+                      >
                     </td>
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="">Ver tipos de paquetes</a>
+                      <a
+                        class="btn"
+                        href="./consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html"
+                        >Ver tipos de paquetes</a
+                      >
                     </td>
                   </tr>
                   <tr>
