Pronto perfil generico

--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaUsuario.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaUsuario.html
@@ -217,9 +217,9 @@
                   </div>
                   <div class="card-footer border-0 bg-white text-end">
                     <a
-                      href="./consultarMiPerfilEmpresa.html"
+                      href="./perfilGeneralPostulante.html"
                       class="btn btn-primary"
-                      >Mas Info</a
+                      >Perfil</a
                     >
                   </div>
                 </div>
@@ -247,7 +247,7 @@
                     <a
                       href="./consultarMiPerfilEmpresa.html"
                       class="btn btn-primary"
-                      >Mas Info</a
+                      >Perfil</a
                     >
                   </div>
                 </div>
