--- a/Tarea2/Servidor-Web/src/main/webapp/index.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/index.html
@@ -18,7 +18,7 @@
     <title>Trabajo.uy</title>
   </head>
 
-  <body>
+  <body class="mb-4">
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <div class="row w-100 justify-content-between align-items-center">
