--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/consultaUsuario.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/consultaUsuario.html
@@ -72,7 +72,7 @@
                     class="btn dropdown-toggle"
                     data-bs-toggle="dropdown"
                   >
-                    EcoTech
+                    lgarcia
                   </button>
                   <ul class="dropdown-menu">
                     <li>
@@ -223,7 +223,7 @@
                     <a
                       href="./consultarMiPerfilPostulante.html"
                       class="btn btn-primary"
-                      >Mas Info</a
+                      >Perfil</a
                     >
                   </div>
                 </div>
@@ -249,9 +249,9 @@
                   </div>
                   <div class="card-footer border-0 bg-white text-end">
                     <a
-                      href="./consultarMiPerfilPostulante.html"
+                      href="../Postulante/perfilGeneralEmpresa.html"
                       class="btn btn-primary"
-                      >Mas Info</a
+                      >Perfil</a
                     >
                   </div>
                 </div>
