--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Visitante/consultaUsuario.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Visitante/consultaUsuario.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="../../css/general.css" />
     <link rel="stylesheet" href="../../css/consultaUsuario.css" />
-    <title>Trabajo.uy</title>
+    <title>Consulta Usuario</title>
   </head>
 
   <body>
@@ -56,7 +56,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link text-white"
-                  href="/tpgr04/Tarea2/Servidor-Web/src/main/webapp/index.html"
+                  href="../../../index.html"
                   >Inicio</a
                 >
               </li>
@@ -72,7 +72,174 @@
         </div>
       </div>
     </nav>
-
+    <main class="container pt-5">
+      <div class="row">
+        <div class="col-3">
+          <section class="text-center">
+            <div class="table-responsive overflow-auto tablaKeyword">
+              <table class="table table-hover table-bordered">
+                <thead class="table-primary">
+                  <tr>
+                    <th class="cabezaTabla">Menú</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td class="d-flex">
+                      <a
+                        class="btn"
+                        href="./consultaUsuario.html"
+                        >Consulta usuarios</a
+                      >
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="d-flex">
+                      <a
+                        class="btn"
+                        href="./consultaDeTipoDePublicacionDeOfertaLaboral.html"
+                        >Ver tipos de publicaciones</a
+                      >
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="d-flex">
+                      <a
+                        class="btn"
+                        href="./consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html"
+                        >Ver tipos de paquetes</a
+                      >
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="d-flex">
+                      <a
+                        class="btn"
+                        href=""
+                        >Consulta ofertas laborales</a
+                      >
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </section>
+          <section class="text-center">
+            <div class="tablaKeyword table-responsive overflow-auto">
+              <table class="table table-hover table-bordered">
+                <thead class="table-primary">
+                  <tr>
+                    <th class="cabezaTabla">Keywords</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>
+                      <button class="btnKeyword btn">Tiempo Completo</button>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <button class="btnKeyword btn">Medio tiempo</button>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><button class="btnKeyword btn">Remoto</button></td>
+                  </tr>
+                  <tr>
+                    <td><button class="btnKeyword btn">Freelance</button></td>
+                  </tr>
+                  <tr>
+                    <td><button class="btnKeyword btn">Temporal</button></td>
+                  </tr>
+                  <tr>
+                    <td><button class="btnKeyword btn">Permanente</button></td>
+                  </tr>
+                  <tr>
+                    <td><button class="btnKeyword btn">Computación</button></td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <button class="btnKeyword btn">Administración</button>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><button class="btnKeyword btn">Logística</button></td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <button class="btnKeyword btn">Contabilidad</button>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </section>
+        </div>
+        <div class="col-8">
+          <section>
+            <h2>Usuarios registrados:</h2>
+            <div class="card">
+              <div class="row g-0">
+                <div
+                  class="col-md-3 justify-content-center align-items-center d-flex"
+                >
+                  <img
+                    src="../../img/Usuarios/Postulantes/Postulante01.png"
+                    class="img-fluid rounded-start"
+                    alt="Imagen Oferta"
+                  />
+                </div>
+                <div class="col-md-9">
+                  <div class="card-body">
+                    <h5 class="card-header p-0 border-0 bg-white text-start">
+                      lgarcia
+                    </h5>
+                    <p class="card-text">Tipo: Postulante</p>
+                  </div>
+                  <div class="card-footer border-0 bg-white text-end">
+                    <a
+                      href="../Visitante/perfilGeneralPostulante.html"
+                      class="btn btn-primary"
+                      >Perfil</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="row g-0">
+                <div
+                  class="col-md-3 justify-content-center align-items-center d-flex"
+                >
+                  <img
+                    src="../../img/Usuarios/Empresas/Empresa01.jpg"
+                    class="img-fluid rounded-start"
+                    alt="Imagen Oferta"
+                  />
+                </div>
+                <div class="col-md-9">
+                  <div class="card-body">
+                    <h5 class="card-header p-0 border-0 bg-white text-start">
+                      EcoTech
+                    </h5>
+                    <p class="card-text">Tipo: Empresa</p>
+                  </div>
+                  <div class="card-footer border-0 bg-white text-end">
+                    <a
+                      href="../Visitante/perfilGeneralEmpresa.html"
+                      class="btn btn-primary"
+                      >Perfil</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+    </main>
+<!--
     <main class="container pt-5">
       <div class="row">
         <div class="col-3">
@@ -208,6 +375,7 @@
         </div>
       </div>
     </main>
+  -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
