--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Visitante/oferta.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Visitante/oferta.html
@@ -7,6 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/general.css">
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
+  />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <title>Consulta de Ofertas</title>
 </head>
@@ -62,14 +66,14 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td class="d-flex"><a class="btn" href="">Consulta
+                                    <td class="d-flex"><a class="btn" href="./consultaUsuario.html">Consulta
                                             usuarios</a></td>
                                 </tr>
                                 <tr>
-                                    <td class="d-flex"><a class="btn" href="">Ver tipos de publicaciones</a></td>
+                                    <td class="d-flex"><a class="btn" href="./consultaDeTipoDePublicacionDeOfertaLaboral.html">Ver tipos de publicaciones</a></td>
                                 </tr>
                                 <tr>
-                                    <td class="d-flex"><a class="btn" href="">Ver tipos de paquetes</a></td>
+                                    <td class="d-flex"><a class="btn" href="./consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html">Ver tipos de paquetes</a></td>
                                 </tr>
                                 <tr>
                                     <td class="d-flex"><a class="btn" href="">Consulta ofertas laborales</a></td>
@@ -170,9 +174,9 @@
 
 
                 </div>
+            </section>
                 
         </div>
-        </section>
     </main>
 </body>
 
