--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/postulacion.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/postulacion.html
@@ -243,7 +243,8 @@
               </div>
             </div>
             <div class="col">
-                <div class="camposForm">
+				<form action = "./consultarMiPerfilPostulante.html">
+					<div class="camposForm">
                     <div class="form-group">
                       <label for="textAreaCV">*CV reducido</label>
                       <textarea
@@ -266,13 +267,15 @@
                     </div>
                   </div>
                   <div class="col" id="botonesConfirmarCancelar">
-                    <button id="btnConfirmar" type="submit" class="btn btn-primary" href="./indexPostulante.html">
+                    <button id="btnConfirmar" type="submit" class="btn btn-primary" >
                       Confirmar
                     </button>
                     <a id="btnCancelar" href="./indexPostulante.html" class="btn btn-primary">
                       Cancelar
                     </a>
                   </div>
+				</form>
+                
             </div>
           </section>
         </div>
