--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/altaOferta.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/altaOferta.html
@@ -60,7 +60,7 @@
               <li class="nav-item">
                 <img
                   class="rounded-pill imgPerfil"
-                  src="../img/ecoTechLogo.jpg"
+                  src="../img/Usuarios/Empresas/Empresa01.jpg"
                   alt="Foto de Perfil"
                 />
               </li>
@@ -77,7 +77,7 @@
                     <li>
                       <a
                         class="dropdown-item"
-                        href="./consultarMiPerfilEmpresa.html"
+                        href="./Empresa/consultarMiPerfilEmpresa.html"
                         >Perfil</a
                       >
                     </li>
@@ -99,7 +99,7 @@
     >
       <form
         id="formAltaOferta"
-        class="bg-white rounded container py-3 mx-3 shadow-sm"
+        class="bg-white rounded container py-3 mx-3 shadow-sm" action="./Empresa/consultarMiPerfilEmpresa.html"
       >
         <div class="row g-5 mx-2">
           <div class="col-6">
@@ -279,12 +279,12 @@
 
             <div class="camposForm" id="divSeleccionPaquete">
               <label for="listPaquetes">*Selecciona un paquete:</label>
-              <select class="form-control" id="listPaquetes" required>
+              <select class="form-control" id="listPaquetes"> 
                 <option value="">-- Selecciona un paquete --</option>
-                <option value="Paquete 1">Básico</option>
-                <option value="Paquete 2">Destacado</option>
-                <option value="Paquete 3">Premium</option>
-                <option value="Paquete 4">Express</option>
+                <option name="Paquete 1">Básico</option>
+                <option name="Paquete 2">Destacado</option>
+                <option name="Paquete 3">Premium</option>
+                <option name="Paquete 4">Express</option>
               </select>
               <div id="descuentoContainer" class="mt-3"></div>
             </div>
@@ -302,7 +302,6 @@
       </form>
     </main>
 
-    <script src="../js/app.js"></script>
     <!--link archivo js-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
@@ -369,7 +368,7 @@
       if (tipoSeleccionado) {
         botonRedireccionar.style.display = "block";
         botonRedireccionar.onclick = function () {
-          window.location.href = `${tipoSeleccionado}.html`;
+          window.location.href = `./Empresa/consultaDeTipoDePublicacionDeOfertaLaboral.html` //`${tipoSeleccionado}.html`;
         };
       } else {
         botonRedireccionar.style.display = "none";
