se modifican paginas varias

--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaDePaqueteDeTiposDePublicacionOfertaLaboral.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaDePaqueteDeTiposDePublicacionOfertaLaboral.html
@@ -113,6 +113,13 @@
                 <tbody>
                   <tr>
                     <td class="d-flex">
+                      <a class="btn" href="./altaOferta.html"
+                        >Alta oferta laboral</a
+                      >
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="d-flex">
                       <a class="btn" href="./consultaUsuario.html"
                         >Consulta usuarios</a
                       >
