--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultarMiPerfilEmpresa.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultarMiPerfilEmpresa.html
@@ -230,7 +230,7 @@
                       </tr>
                       <tr>
                         <td><strong>Sitio web</strong></td>
-                        <td>http://www.EcoTechInnova</td>
+                        <td>http://www.EcoTechInnova.com</td>
                         <td>
                           <button>
                             <i class="fa-solid fa-pen-to-square fa-lg"></i>
@@ -280,7 +280,7 @@
                     <tbody>
                       <tr>
                         <td>
-                          <a href="./oferta.html">Desarrollador Frontend</a>
+                          <a href="./ofertaEmpresa.html">Desarrollador Frontend</a>
                         </td>
                         <td>09:00 - 18:00</td>
                         <td>90000</td>
@@ -294,7 +294,7 @@
                       </tr>
                       <tr>
                         <td>
-                          <a href="./oferta.html">A. de Marketing Digital</a>
+                          <a href="./ofertaEmpresaMarqueting.html">A. de Marketing Digital</a>
                         </td>
                         <td>10:00 - 19:00</td>
                         <td>80000</td>
@@ -323,7 +323,7 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <td><a href="">Básico</a></td>
+                          <td><a href="./Paquete.html">Básico</a></td>
                           <td>
                             Publica ofertas laborales en nuestra plataforma
                             por un período de 30 días
@@ -331,19 +331,6 @@
                           <td>30 días</td>
                           <td>20%</td>
                           <td>16/08/2023</td>
-                        </tr>
-                        <tr>
-                          <td>
-                            <a href="">Express</a>
-                          </td>
-                          <td>
-                            Publica ofertas laborales urgentes resaltada en
-                            color y se mostrará en la sección de urgente por
-                            15 días.
-                          </td>
-                          <td>15 días</td>
-                          <td>5%</td>
-                          <td>13/08/2023</td>
                         </tr>
                       </tbody>
                     </table>
