--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/TipoPublicacion.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/TipoPublicacion.html
@@ -215,6 +215,10 @@
                       <i class="bi bi-arrow-right-circle text-primary"></i>
                       Duración: 30 días
                     </li>
+                    <li class="text-secondary">
+                      <i class="bi bi-arrow-right-circle text-primary"></i>
+                      Fecha de alta: 10/08/2023
+                    </li>
                   </ul>
                   <div class="text-start">
                     <h2 class="">$4000 <sub>/Oferta laboral</sub></h2>
