--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/consultarMiPerfilPostulante.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/consultarMiPerfilPostulante.html
@@ -120,7 +120,7 @@
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="">Consulta ofertas laborales</a>
+                      <a class="btn" href="./consultaOfertaLaboralPostulante.html">Consulta ofertas laborales</a>
                     </td>
                   </tr>
                 </tbody>
