--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/indexPostulante.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/indexPostulante.html
@@ -134,7 +134,7 @@
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="./consultaOferta.html"
+                      <a class="btn" href="./consultaOfertaLaboralPostulante.html"
                         >Consulta ofertas laborales</a
                       >
                     </td>
@@ -219,7 +219,7 @@
                     </p>
                   </div>
                   <div class="card-footer border-0 bg-white text-end">
-                    <a href="" class="btn btn-primary">Mas Info</a>
+                    <a href="./ofertaPostulantePostulado.html" class="btn btn-primary">Mas Info</a>
                   </div>
                 </div>
               </div>
@@ -246,61 +246,7 @@
                     </p>
                   </div>
                   <div class="card-footer border-0 bg-white text-end">
-                    <a href="" class="btn btn-primary">Mas Info</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="row g-0">
-                <div
-                  class="col-md-4 justify-content-center align-items-center d-flex"
-                >
-                  <img
-                    src="../../img/ofertas/OfertaGenerica.jpg"
-                    class="img-fluid rounded-start"
-                    alt="Imagen Oferta"
-                  />
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-header p-0 border-0 bg-white text-start">
-                      Estratega de Negocios
-                    </h5>
-                    <p class="card-text">
-                      Forma parte de nuestro equipo de estrategia y contribuye
-                      al crecimiento de las empresas clientes.
-                    </p>
-                  </div>
-                  <div class="card-footer border-0 bg-white text-end">
-                    <a href="" class="btn btn-primary">Mas Info</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="row g-0">
-                <div
-                  class="col-md-4 justify-content-center align-items-center d-flex"
-                >
-                  <img
-                    src="../../img/ofertas/OfertaGenerica.jpg"
-                    class="img-fluid rounded-start"
-                    alt="Imagen Oferta"
-                  />
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-header p-0 border-0 bg-white text-start">
-                      Analista de Datos
-                    </h5>
-                    <p class="card-text">
-                      Ayuda a nuestros clientes a tomar decisiones informadas
-                      basadas en analisis y visualizaciones de datos.
-                    </p>
-                  </div>
-                  <div class="card-footer border-0 bg-white text-end">
-                    <a href="" class="btn btn-primary">Mas Info</a>
+                    <a href="./ofertaPostulanteNoPostulado.html" class="btn btn-primary">Mas Info</a>
                   </div>
                 </div>
               </div>
