--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/perfilGeneralEmpresa.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/perfilGeneralEmpresa.html
@@ -104,7 +104,7 @@
                             </tr>
                             <tr>
                                 <td class="d-flex">
-                                    <a class="btn" href="">Consulta ofertas laborales</a>
+                                    <a class="btn" href="./consultaOfertaLaboralPostulante.html">Consulta ofertas laborales</a>
                                 </td>
                             </tr>
                         </tbody>
@@ -217,7 +217,7 @@
                                             </tr>
                                             <tr>
                                                 <td><strong>Sitio web</strong></td>
-                                                <td>http://www.EcoTechInnova</td>
+                                                <td>http://www.EcoTechInnova.com</td>
                                             </tr>
                                             <tr>
                                                 <td><strong>Descripción</strong></td>
@@ -256,7 +256,7 @@
                                         <tbody>
                                             <tr>
                                                 <td>
-                                                    <a href="./oferta.html">Desarrollador Frontend</a>
+                                                    <a href="./ofertaPostulantePostulado.html">Desarrollador Frontend</a>
                                                 </td>
                                                 <td>09:00 - 18:00</td>
                                                 <td>90000</td>
@@ -267,6 +267,19 @@
                                                 <td>Montevideo</td>
                                                 <td>Montevideo</td>
                                             </tr>
+                                            <tr>
+                                                <td>
+                                                  <a href="./ofertaPostulanteNoPostulado.html">A. de Marketing Digital</a>
+                                                </td>
+                                                <td>10:00 - 19:00</td>
+                                                <td>80000</td>
+                                                <td>
+                                                  Únete a nuestro equipo de marketing y trabaja en
+                                                  estrategias digitales innovadoras.
+                                                </td>
+                                                <td>Flores</td>
+                                                <td>Flores</td>
+                                              </tr>
                                         </tbody>
                                     </table>
                                 </div>
