--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/postulacion.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/postulacion.html
@@ -255,7 +255,7 @@
                       ></textarea>
                     </div>
                   </div>
-                  <div class="camposForm">
+                  <div class="camposForm mb-3">
                     <div class="form-group">
                       <label for="textAreaMotivacion">*Motivacion</label>
                       <textarea
