--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/Paquete.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/Paquete.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,20 +9,21 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <link rel="icon" type="image/x-icon" href="../img/Icon_Logo.svg" />
+    <link rel="icon" type="image/x-icon" href="../../img/Icon_Logo.svg" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="../../css/general.css" />
-    <title>Trabajo.uy</title>
+    <title>Oferta</title>
   </head>
-  <body class="min-vh-100 d-flex flex-column">
+
+  <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <div class="row w-100 justify-content-between align-items-center">
           <div class="col-2">
-            <a href="../../../index.html"
+            <a href="./indexEmpresa.html"
               ><img
                 src="../../img/Logo.svg"
                 alt="Logo"
@@ -58,7 +59,7 @@
               </li>
               <li class="nav-item">
                 <img
-                  class="rounded-pill img-fluid"
+                  class="rounded-pill imgPerfil"
                   src="../../img/Usuarios/Empresas/Empresa01.jpg"
                   alt="Foto de Perfil"
                 />
@@ -76,7 +77,7 @@
                     <li>
                       <a
                         class="dropdown-item"
-                        href="../Empresa/consultarMiPerfilEmpresa.html"
+                        href="./consultarMiPerfilEmpresa.html"
                         >Perfil</a
                       >
                     </li>
@@ -93,8 +94,9 @@
         </div>
       </div>
     </nav>
-    <main class="container py-5">
-      <div class="row bg-white">
+
+    <main class="container pt-5">
+      <div class="row">
         <div class="col-3">
           <section class="text-center">
             <div class="table-responsive overflow-auto tablaKeyword">
@@ -107,6 +109,13 @@
                 <tbody>
                   <tr>
                     <td class="d-flex">
+                      <a class="btn" href="./altaOferta.html"
+                        >Alta oferta laboral</a
+                      >
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="d-flex">
                       <a class="btn" href="./consultaUsuario.html"
                         >Consulta usuarios</a
                       >
@@ -114,27 +123,17 @@
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a
-                        class="btn"
-                        href="./consultaDeTipoDePublicacionDeOfertaLaboral.html"
-                        >Ver tipos de publicaciones</a
-                      >
+                      <a class="btn" href="./consultaDeTipoDePublicacionDeOfertaLaboral.html">Ver tipos de publicaciones</a>
                     </td>
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a
-                        class="btn"
-                        href="./consultaDePaqueteDeTiposDePublicacionOfertaLaboral.html"
-                        >Ver tipos de paquetes</a
-                      >
+                      <a class="btn" href="./consultaDePaqueteDeTiposDePublicacionOfertaLaboral.html">Ver tipos de paquetes</a>
                     </td>
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="../consultaOfertaLaboralEmpresa.html"
-                        >Consulta ofertas laborales</a
-                      >
+                      <a class="btn" href="./consultaOfertaLaboralEmpresa.html">Consulta ofertas laborales</a>
                     </td>
                   </tr>
                 </tbody>
@@ -225,7 +224,7 @@
                     </li>
                     <li class="text-secondary">
                       <i class="bi bi-arrow-right-circle text-primary"></i>
-                      Fecha 16/08/23
+                      Fecha 17/08/23
                     </li>
                   </ul>
 
