--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaDeTipoDePublicacionDeOfertaLaboral.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaDeTipoDePublicacionDeOfertaLaboral.html
@@ -113,6 +113,13 @@
                 <tbody>
                   <tr>
                     <td class="d-flex">
+                      <a class="btn" href="./altaOferta.html"
+                        >Alta oferta laboral</a
+                      >
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="d-flex">
                       <a class="btn" href="./consultaUsuario.html"
                         >Consulta usuarios</a
                       >
@@ -212,7 +219,7 @@
                     <p class="card-text">Obtener maxima visibilidad.</p>
                   </div>
                   <div class="card-footer border-0 bg-white text-end">
-                    <a href="../TipoPublicacion.html" class="btn btn-primary"
+                    <a href="./TipoPublicacion.html" class="btn btn-primary"
                       >Mas Info</a
                     >
                   </div>
@@ -229,7 +236,7 @@
                     <p class="card-text">Destaca tu anuncio.</p>
                   </div>
                   <div class="card-footer border-0 bg-white text-end">
-                    <a href="../TipoPublicacion.html" class="btn btn-primary"
+                    <a href="./TipoPublicacion.html" class="btn btn-primary"
                       >Mas Info</a
                     >
                   </div>
@@ -247,7 +254,7 @@
                     <p class="card-text">Mejora la posicion de tu anuncio.</p>
                   </div>
                   <div class="card-footer border-0 bg-white text-end">
-                    <a href="../TipoPublicacion.html" class="btn btn-primary"
+                    <a href="./TipoPublicacion.html" class="btn btn-primary"
                       >Mas Info</a
                     >
                   </div>
@@ -266,7 +273,7 @@
                     </p>
                   </div>
                   <div class="card-footer border-0 bg-white text-end">
-                    <a href="../TipoPublicacion.html" class="btn btn-primary"
+                    <a href="./TipoPublicacion.html" class="btn btn-primary"
                       >Mas Info</a
                     >
                   </div>
