--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaOfertaLaboralEmpresa.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaOfertaLaboralEmpresa.html
@@ -257,7 +257,7 @@
                     </p>
                   </div>
                   <div class="card-footer border-0 bg-white text-end">
-                    <a href="./ofertaEmpresa.html" class="btn btn-primary"
+                    <a href="./ofertaEmpresaMarqueting.html" class="btn btn-primary"
                       >Mas Info</a
                     >
                   </div>
