--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/indexEmpresa.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/indexEmpresa.html
@@ -140,7 +140,7 @@
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="../consultaOfertaLaboralEmpresa.html"
+                      <a class="btn" href="./consultaOfertaLaboralEmpresa.html"
                         >Consulta ofertas laborales</a
                       >
                     </td>
@@ -251,64 +251,6 @@
                     <p class="card-text">
                       Únete a nuestro equipo de marketing y trabaja en
                       estrategias digitales innovadoras.
-                    </p>
-                  </div>
-                  <div class="card-footer border-0 bg-white text-end">
-                    <a href="../Empresa/oferta.html" class="btn btn-primary"
-                      >Mas Info</a
-                    >
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="row g-0">
-                <div
-                  class="col-md-4 justify-content-center align-items-center d-flex"
-                >
-                  <img
-                    src="../../img/ofertas/OfertaGenerica.jpg"
-                    class="img-fluid rounded-start"
-                    alt="Imagen Oferta"
-                  />
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-header p-0 border-0 bg-white text-start">
-                      Estratega de Negocios
-                    </h5>
-                    <p class="card-text">
-                      Forma parte de nuestro equipo de estrategia y contribuye
-                      al crecimiento de las empresas clientes.
-                    </p>
-                  </div>
-                  <div class="card-footer border-0 bg-white text-end">
-                    <a href="../Empresa/oferta.html" class="btn btn-primary"
-                      >Mas Info</a
-                    >
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="row g-0">
-                <div
-                  class="col-md-4 justify-content-center align-items-center d-flex"
-                >
-                  <img
-                    src="../../img/ofertas/OfertaGenerica.jpg"
-                    class="img-fluid rounded-start"
-                    alt="Imagen Oferta"
-                  />
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-header p-0 border-0 bg-white text-start">
-                      Analista de Datos
-                    </h5>
-                    <p class="card-text">
-                      Ayuda a nuestros clientes a tomar decisiones informadas
-                      basadas en analisis y visualizaciones de datos.
                     </p>
                   </div>
                   <div class="card-footer border-0 bg-white text-end">
