--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/Paquete.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/Paquete.html
@@ -227,15 +227,13 @@
                     </li>
                     <li class="text-secondary">
                       <i class="bi bi-arrow-right-circle text-primary"></i>
-                      Fecha 16/08/23
+                      Fecha 17/08/23
                     </li>
                   </ul>
 
                   <div
-                    class="d-flex justify-content-between align-items-center"
-                  >
+                    class="d-flex justify-content-between align-items-center">
                     <h2 class="">$240</h2>
-                    <a href="" class="btn btn-primary">Comprar</a>
                   </div>
                 </div>
               </div>
