--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html
@@ -138,7 +138,7 @@
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="./consultaOferta.html"
+                      <a class="btn" href="./consultaOfertaLaboralPostulante.html"
                         >Consulta ofertas laborales</a
                       >
                     </td>
