--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/consultaUsuario.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/consultaUsuario.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="../../css/general.css" />
     <link rel="stylesheet" href="../../css/consultaUsuario.css" />
-    <title>Trabajo.uy</title>
+    <title>Consulta de usuario</title>
   </head>
 
   <body>
@@ -137,7 +137,7 @@
                     <td class="d-flex">
                       <a
                         class="btn"
-                        href="../consultaOfertaLaboralPostulante.html"
+                        href="./consultaOfertaLaboralPostulante.html"
                         >Consulta ofertas laborales</a
                       >
                     </td>
