--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/miPostulacion.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/miPostulacion.html
@@ -9,9 +9,14 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
+    <link rel="icon" type="image/x-icon" href="./recourse/img/Icon_Logo.svg" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="../../css/general.css" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Consulta de Ofertas</title>
+    <link rel="stylesheet" href="../../css/consultaUsuario.css" />
+    <title>Mi postulación</title>
   </head>
 
   <body>
@@ -19,7 +24,7 @@
       <div class="container">
         <div class="row w-100 justify-content-between align-items-center">
           <div class="col-2">
-            <a href="../../../index.html"
+            <a href="./indexPostulante.html"
               ><img
                 src="../../img/Logo.svg"
                 alt="Logo"
@@ -56,7 +61,7 @@
               <li class="nav-item">
                 <img
                   class="rounded-pill imgPerfil"
-                  src="../../img/Usuarios/Empresas/Empresa01.jpg"
+                  src="../../img/Usuarios/Postulantes/Postulante01.png"
                   alt="Foto de Perfil"
                 />
               </li>
@@ -67,13 +72,13 @@
                     class="btn dropdown-toggle"
                     data-bs-toggle="dropdown"
                   >
-                    EcoTech
+                    lgarcia
                   </button>
                   <ul class="dropdown-menu">
                     <li>
                       <a
                         class="dropdown-item"
-                        href="../Empresa/consultarMiPerfilEmpresa.html"
+                        href="./consultarMiPerfilPostulante.html"
                         >Perfil</a
                       >
                     </li>
@@ -105,13 +110,6 @@
                 <tbody>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="../altaOferta.html"
-                        >Alta oferta laboral</a
-                      >
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="d-flex">
                       <a class="btn" href="./consultaUsuario.html"
                         >Consulta usuarios</a
                       >
@@ -130,14 +128,16 @@
                     <td class="d-flex">
                       <a
                         class="btn"
-                        href="./consultaDePaqueteDeTiposDePublicacionOfertaLaboral.html"
+                        href="./consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html"
                         >Ver tipos de paquetes</a
                       >
                     </td>
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="./consultaOferta.html"
+                      <a
+                        class="btn"
+                        href="../consultaOfertaLaboralPostulante.html"
                         >Consulta ofertas laborales</a
                       >
                     </td>
@@ -198,110 +198,60 @@
             </div>
           </section>
         </div>
-        <section class="col-8">
-          <div class="row">
-            <div class="col-md-8">
-              <div class="card">
-                <div class="row g-0">
-                  <div
-                    class="col-md-4 justify-content-center align-items-center d-flex"
-                  >
-                    <img
-                      src="../../img/ofertas/Oferta01.png"
-                      class="img-fluid rounded-start"
-                      alt="Imagen Oferta"
-                    />
-                  </div>
-                  <div class="col-md-8">
-                    <div class="card-body">
-                      <h5 class="card-header p-0 border-0 bg-white text-start">
-                        Desarrollador Frontend
-                      </h5>
-                      <p class="card-text">
-                        Únete a nuestro equipo de desarrollo frontend y crea
-                        experiencias de usuario excepcionales.
-                      </p>
+            <!-- Columna central para la tarjeta existente -->
+            <div class="col-md-6">
+                <!-- Contenido de la tarjeta existente aquí -->
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="../../img/Usuarios/Postulantes/Postulante01.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Postulación a oferta laboral</h5>
+                                <p class="card-text">
+                                    <strong>Postulante: </strong> <a href="consultarMiPerfilPostulante.html">Lucía García</a>
+                                    <br>
+                                    <br>
+                                    <strong>CV reducido: </strong> Licenciada en Administración,
+                                    experiencia en gestión de equipos y proyectos.
+                                    Conocimientos en Microsoft Office.
+                                    <br>
+                                    <br>
+                                    <strong>Motivación: </strong> Estoy emocionada por
+                                    la oportunidad de formar parte de un equipo
+                                    dinámico y contribuir con mis habilidades de
+                                    liderazgo.
+                                    <br>
+                                    <br>
+                                    <strong>Fecha de postulación: </strong> 16/08/23
+                                    <br>
+                                    <br>
+                                    <div class="row justify-content-center buttons-container">
+                                    </div>
+                                </p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-body">
-                      <ul class="list-group list-group-flush">
-                        <li class="list-group-item">
-                          <b>Remuneración:</b> 90000 pesos uruguayos
-                        </li>
-                        <li class="list-group-item">
-                          <b>Horario:</b> 9:00-18:00
-                        </li>
-                        <li class="list-group-item">
-                          <b>Departamento:</b> Montevideo
-                        </li>
-                        <li class="list-group-item">
-                          <b>Ciudad:</b> Montevideo
-                        </li>
-                        <li class="list-group-item">
-                          <b>Fecha de alta:</b> 14/08/23
-                        </li>
-                        <li class="list-group-item"><b>Costo:</b> 4000</li>
-                        <li class="list-group-item">
-                          <b>Keywords:</b> Tiempo completo, Medio tiempo,
-                          Remoto, Freelance, Temporal, Permanente
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
                 </div>
-              </div>
-              <div>
-                <h1>Paquetes</h1>
-                <div class="card cardOferta mb-3">
-                  <div class="row g-0">
-                    <div class="col-md-4">
-                      <img
-                        src="../../img/Paquete/Basico.jpg"
-                        class="img-fluid rounded-start"
-                        alt="..."
-                      />
-                    </div>
-                    <div class="col-md-8">
-                      <div class="card-body">
-                        <h1 class="card-title">Básico</h1>
-                        <p class="card-text">
-                          <a href="#" class="btn btn-primary">Ir a Paquete</a>
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
             </div>
-            <div class="col-md-4">
-              <div>
-                <h1>Postulaciones</h1>
-              </div>
-              <div class="card" style="width: 15rem">
-                <img
-                  src="../../img/Usuarios/Postulantes/Postulante01.png"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body">
-                  <p class="card-text"><a href="">lgarcia</a></p>
-                  <a href="#" class="btn btn-primary">Ir a postulacion</a>
+            <!-- Columna derecha para la última card -->
+            <div class="col-md-3">
+                <!-- Contenido de la última card aquí -->
+                <div class="card">
+                    <img src="../../img/ofertas/Oferta01.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <a href="./ofertaPostulantePostulado.html" class="card-link">
+                            <h5 class="card-title text-center">Desarrollador Frontend</h5>
+                        </a>
+                    </div>
                 </div>
-              </div>
-              <div class="card" style="width: 15rem">
-                <img
-                  src="../../img/Usuarios/Postulantes/Postulante01.png"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body">
-                  <p class="card-text"><a href="">maro</a></p>
-                  <a href="#" class="btn btn-primary">Ir a postulacion</a>
-                </div>
-              </div>
             </div>
-          </div>
-        </section>
-      </div>
-    </main>
-  </body>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-rfFPp5f5I5fHgBkof8K7jO5/Jz7PoCmMF+L5z5q8Zw5dIdFm0iXb5V5Dj6P5d5F5D" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
+    </script>
+</body>
 </html>
