--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/ofertaPostulantePostulado.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/ofertaPostulantePostulado.html
@@ -238,7 +238,7 @@
                           </li>
                         </ul>
                         <div class="text-center">
-                          <a href="#" class="btn btn-primary"
+                          <a href="./miPostulacion.html" class="btn btn-primary"
                             >Ir a Mi Postulacion</a
                           >
                         </div>
